--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -60,15 +60,16 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Capacity</p>
-                                    105GB
+                                    <p>Total Population</p>
+                                    40000
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-reload"></i> Updated now
+                                <i class="ti-reload"></i>
+                                Updated 2mins ago
                             </div>
                         </div>
                     </div>
@@ -85,15 +86,16 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Revenue</p>
-                                    $1,345
+                                    <p>Sites Read News Today</p>
+                                    2
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-calendar"></i> Last day
+                                <i class="ti-calendar"></i> 
+                                Updated 2mins ago
                             </div>
                         </div>
                     </div>
@@ -110,15 +112,16 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Errors</p>
-                                    23
+                                    <p>People Born This Month</p>
+                                    2
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-timer"></i> In the last hour
+                                <i class="ti-timer"></i>
+                                Updated 2mins ago
                             </div>
                         </div>
                     </div>
@@ -135,15 +138,16 @@
                             </div>
                             <div class="col-xs-7">
                                 <div class="numbers">
-                                    <p>Followers</p>
-                                    +45
+                                    <p>People Died This Month</p>
+                                    2
                                 </div>
                             </div>
                         </div>
                         <div class="footer">
                             <hr />
                             <div class="stats">
-                                <i class="ti-reload"></i> Updated now
+                                <i class="ti-reload"></i>
+                                Updated 2mins ago
                             </div>
                         </div>
                     </div>
@@ -175,6 +179,8 @@
                 </div>
             </div>
         </div>
+
+        <!--
         <div class="row">
             <div class="col-md-6">
                 <div class="card">
@@ -222,10 +228,11 @@
                 </div>
             </div>
         </div>
+        -->
     </div>
 </div>
 <footer class="footer">
-<div class="container-fluid">
+<!-- <div class="container-fluid">
     <nav class="pull-left">
         <ul>
 
@@ -245,9 +252,9 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
     <div class="copyright pull-right">
-        &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>
+        &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <!-- <a href="http://www.creative-tim.com">Creative Tim</a> -->
     </div>
 </div>
 </footer>
