Added chartist for chart presentation.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Evr Stats Konsole</title>
+	<title>EVR Stats Konsole</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -24,15 +24,51 @@
     <!--  Paper Dashboard core CSS    -->
     <%= stylesheet_link_tag 'bootstrap/paper-dashboard', rel: 'stylesheet' %>
 
-    <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <%= stylesheet_link_tag 'bootstrap/demo', rel: 'stylesheet' %>
-
-
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag 'bootstrap/themify-icons', rel: 'stylesheet' %>
 
+    <!-- Style for Chartist legends -->
+    <style>
+      .ct-legend {
+    position: relative;
+    z-index: 10;
+
+    li {
+        position: relative;
+        padding-left: 23px;
+        margin-bottom: 3px;
+    }
+
+    li:before {
+        width: 12px;
+        height: 12px;
+        position: absolute;
+        left: 0;
+        content: '';
+        border: 3px solid transparent;
+        border-radius: 2px;
+    }
+
+    li.inactive:before {
+        background: transparent;
+    }
+
+    &.ct-legend-inside {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+
+    @for $i from 0 to length($ct-series-colors) {
+        .ct-series-#{$i}:before {
+            background-color: nth($ct-series-colors, $i + 1);
+            border-color: nth($ct-series-colors, $i + 1);
+        }
+    }
+}
+    </style>
 </head>
 <body>
 
@@ -46,8 +82,8 @@
 
     	<div class="sidebar-wrapper">
             <div class="logo">
-                <a href="http://www.creative-tim.com" class="simple-text">
-                    Creative Tim
+                <a href="#" class="simple-text">
+                  EVR Stats Konsole
                 </a>
             </div>
 
@@ -122,12 +158,11 @@
     <!--  Google Maps Plugin    -->
     <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script> -->
 
-    <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-    <%= javascript_include_tag 'bootstrap/paper-dashboard' %>
-
-	<script type="text/javascript">
+  <script type="text/javascript">
+  
     	$(document).ready(function(){
-
+          require('chartist-plugin-legend');
+          
         	demo.initChartist();
 
         	$.notify({
