--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -11,7 +11,7 @@
             <a class="navbar-brand" href="#">Dashboard</a>
         </div>
         <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
+            <!-- <ul class="nav navbar-nav navbar-right">
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="ti-panel"></i>
@@ -39,7 +39,7 @@
                         <p>Settings</p>
                     </a>
                 </li>
-            </ul>
+            </ul> -->
 
         </div>
     </div>
@@ -159,11 +159,15 @@
             <div class="col-md-12">
                 <div class="card">
                     <div class="header">
-                        <h4 class="title">Users Behavior</h4>
-                        <p class="category">24 Hours performance</p>
+                        <h4 class="title">
+                            New Registrations
+                        </h4>
+                        <p class="category">
+                            Number of people registered on a specific day
+                        </p>
                     </div>
                     <div class="content">
-                        <div id="chartHours" class="ct-chart"></div>
+                        <div id="newRegistrations" class="ct-chart"></div>
                         <div class="footer">
                             <div class="chart-legend">
                                 <i class="fa fa-circle text-info"></i> Open
@@ -172,7 +176,8 @@
                             </div>
                             <hr>
                             <div class="stats">
-                                <i class="ti-reload"></i> Updated 3 minutes ago
+                                <i class="ti-reload"></i>
+                                Updated 2mins ago
                             </div>
                         </div>
                     </div>
@@ -260,3 +265,38 @@
 </footer>
 
 </div>
+
+<script>
+    var data = {
+  labels: ['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31'],
+    series: [
+    [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31],
+    [3, 2, 9, 5, 4, 6, 4, 6, 7, 8, 7, 4]
+  ]
+};
+
+var options = {
+  seriesBarDistance: 15
+};
+
+var responsiveOptions = [
+  ['screen and (min-width: 641px) and (max-width: 1024px)', {
+    seriesBarDistance: 10,
+    axisX: {
+      labelInterpolationFnc: function (value) {
+        return value;
+      }
+    }
+  }],
+  ['screen and (max-width: 640px)', {
+    seriesBarDistance: 5,
+    axisX: {
+      labelInterpolationFnc: function (value) {
+        return value[0];
+      }
+    }
+  }]
+];
+
+new Chartist.Bar('#newRegistrations', data, options, responsiveOptions);
+</script>
