--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -139,7 +139,7 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>People Died This Month</p>
-                                    2
+                                    <%= @month_deaths %> / <%= @total_died %>
                                 </div>
                             </div>
                         </div>
@@ -171,7 +171,6 @@
                         <div class="footer">
                             <div class="chart-legend">
                                 <i class="fa fa-circle text-info"></i> Open
-                                <i class="fa fa-circle text-danger"></i> Click
                                 <i class="fa fa-circle text-warning"></i> Click Second Time
                             </div>
                             <hr>
@@ -268,12 +267,12 @@
 
 <script>
     var data = {
-  labels: ['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31'],
-    series: [
-    [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31],
-    [3, 2, 9, 5, 4, 6, 4, 6, 7, 8, 7, 4]
-  ]
-};
+        labels: ['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31'],
+        series: [
+            [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31],
+            [3, 2, 9, 5, 4, 6, 4, 6, 7, 8, 7, 4]
+        ]
+    };
 
 var options = {
   seriesBarDistance: 15
