Added births, deaths, population.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -61,7 +61,7 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>Total Population</p>
-                                    40000
+                                    <%= @total_population %>
                                 </div>
                             </div>
                         </div>
@@ -113,7 +113,7 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>People Born This Month</p>
-                                    2
+                                    <%= @month_births %>
                                 </div>
                             </div>
                         </div>
