--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -69,7 +69,7 @@
                             <hr />
                             <div class="stats">
                                 <i class="ti-reload"></i>
-                                Updated 2mins ago
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <hr />
                             <div class="stats">
                                 <i class="ti-calendar"></i> 
-                                Updated 2mins ago
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
@@ -121,7 +121,7 @@
                             <hr />
                             <div class="stats">
                                 <i class="ti-timer"></i>
-                                Updated 2mins ago
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                             <hr />
                             <div class="stats">
                                 <i class="ti-reload"></i>
-                                Updated 2mins ago
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
@@ -170,13 +170,13 @@
                         <div id="newRegistrations" class="ct-chart"></div>
                         <div class="footer">
                             <div class="chart-legend">
-                                <i class="fa fa-circle text-info"></i> Open
-                                <i class="fa fa-circle text-warning"></i> Click Second Time
+                                <i class="fa fa-circle text-info"></i> New Registrations (Total: <%= @total_new_registrations %>)
+                                <i class="fa fa-circle text-warning"></i> Births (Total: <%= @total_births %>)
                             </div>
                             <hr>
                             <div class="stats">
                                 <i class="ti-reload"></i>
-                                Updated 2mins ago
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
@@ -269,8 +269,8 @@
     var data = {
         labels: ['1','2','3','4','5','6','7','8','9','10','11','12','13','14','15','16','17','18','19','20','21','22','23','24','25','26','27','28','29','30','31'],
         series: [
-            [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31],
-            [3, 2, 9, 5, 4, 6, 4, 6, 7, 8, 7, 4]
+            <%= @registrations %>,
+            <%= @births %>
         ]
     };
 
