Added tracking news.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -87,7 +87,7 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>Sites Read News Today</p>
-                                    2
+                                    <%= @today_news_sites %>
                                 </div>
                             </div>
                         </div>
