Added presentable icons.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -55,7 +55,8 @@
                         <div class="row">
                             <div class="col-xs-5">
                                 <div class="icon-big icon-warning text-center">
-                                    <i class="ti-user"></i>
+                                    <!--<i class="ti-user"></i>-->
+                                    <%= image_tag 'population.png', :size => "60x60" %>
                                 </div>
                             </div>
                             <div class="col-xs-7">
@@ -81,7 +82,8 @@
                         <div class="row">
                             <div class="col-xs-5">
                                 <div class="icon-big icon-success text-center">
-                                    <i class="ti-receipt"></i>
+                                    <!--<i class="ti-receipt"></i>-->
+                                    <%= image_tag 'news_icon.png', :size => "60x60" %>
                                 </div>
                             </div>
                             <div class="col-xs-7">
@@ -107,7 +109,8 @@
                         <div class="row">
                             <div class="col-xs-5">
                                 <div class="icon-big icon-danger text-center">
-                                    <i class="ti-pulse"></i>
+                                    <!--<i class="ti-pulse"></i>-->
+                                    <%= image_tag 'baby_with_diaper.jpg', :size => "60x60" %>
                                 </div>
                             </div>
                             <div class="col-xs-7">
@@ -133,7 +136,8 @@
                         <div class="row">
                             <div class="col-xs-5">
                                 <div class="icon-big icon-info text-center">
-                                    <i class="ti-twitter-alt"></i>
+                                    <!--<i class="ti-twitter-alt"></i>-->
+                                    <%= image_tag 'death_icon.png', :size => "60x60" %>
                                 </div>
                             </div>
                             <div class="col-xs-7">
@@ -257,9 +261,11 @@
             </li>
         </ul>
     </nav> -->
+    <!--
     <div class="copyright pull-right">
-        &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <!-- <a href="http://www.creative-tim.com">Creative Tim</a> -->
+        &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>
     </div>
+    -->
 </div>
 </footer>
 
