--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,108 @@
  *= require_tree .
  *= require_self
  */
+
+/** For chartist and more*/
+.ct-legend {
+    position: relative;
+    z-index: 10;
+   
+    li {
+        position: relative;
+        padding-left: 23px;
+        margin-bottom: 3px;
+    }
+   
+    li:before {
+        width: 12px;
+        height: 12px;
+        position: absolute;
+        left: 0;
+        content: '';
+        border: 3px solid transparent;
+        border-radius: 2px;
+    }
+   
+    li.inactive:before {
+        background: transparent;
+    }
+   
+    &.ct-legend-inside {
+        position: absolute;
+        top: 0;
+        right: 0;
+    }
+   
+    @for $i from 0 to length($ct-series-colors) {
+        .ct-series-#{$i}:before {
+            background-color: nth($ct-series-colors, $i + 1);
+            border-color: nth($ct-series-colors, $i + 1);
+        }
+    }
+   }
+   
+   .sk-cube-grid {
+   width: 40px;
+   height: 40px;
+   margin: 100px auto;
+   }
+   
+   .sk-cube-grid .sk-cube {
+   width: 33%;
+   height: 33%;
+   background-color: #333;
+   float: left;
+   -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+          animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; 
+   }
+   .sk-cube-grid .sk-cube1 {
+   -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+   .sk-cube-grid .sk-cube2 {
+   -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+   .sk-cube-grid .sk-cube3 {
+   -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s; }
+   .sk-cube-grid .sk-cube4 {
+   -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+   .sk-cube-grid .sk-cube5 {
+   -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+   .sk-cube-grid .sk-cube6 {
+   -webkit-animation-delay: 0.3s;
+          animation-delay: 0.3s; }
+   .sk-cube-grid .sk-cube7 {
+   -webkit-animation-delay: 0s;
+          animation-delay: 0s; }
+   .sk-cube-grid .sk-cube8 {
+   -webkit-animation-delay: 0.1s;
+          animation-delay: 0.1s; }
+   .sk-cube-grid .sk-cube9 {
+   -webkit-animation-delay: 0.2s;
+          animation-delay: 0.2s; }
+   
+   @-webkit-keyframes sk-cubeGridScaleDelay {
+   0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+   } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); 
+   }
+   }
+   
+   @keyframes sk-cubeGridScaleDelay {
+   0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1);
+   } 35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1);
+   } 
+   }
+   
+   .ui-datepicker-calendar {
+    display: none;
+   }
