--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -10,8 +10,14 @@
             <a class="navbar-brand" href="#">Dashboard</a>
         </div>
         <div class="collapse navbar-collapse">
-            <!-- <ul class="nav navbar-nav navbar-right">
+            <ul class="nav navbar-nav navbar-right">
                 <li>
+                    <a data-toggle="modal" data-target="#myModal">
+                        <i class="ti-filter"></i>
+                        <p>Filter Month</p>
+                    </a>
+                </li>   
+                <!--<li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                         <i class="ti-panel"></i>
                         <p>Stats</p>
@@ -37,8 +43,8 @@
                         <i class="ti-settings"></i>
                         <p>Settings</p>
                     </a>
-                </li>
-            </ul> -->
+                </li>-->
+            </ul>
 
         </div>
     </div>
