Removed total overall death number.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -95,7 +95,7 @@
                             <div class="col-xs-7">
                                 <div class="numbers">
                                     <p>People Died This Month</p>
-                                    <%= @month_deaths %> / <%= @total_died %>
+                                    <%= @month_deaths %>
                                 </div>
                             </div>
                         </div>
