--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,36 @@
 <div class="content">
     <div class="container-fluid">
         <div class="row">
+            <div class="col-lg-12 col-sm-12">
+                <div class="card">
+                    <div class="content">
+                        <div class="row">
+                            <div class="col-xs-5">
+                                <div class="icon-big icon-warning text-center">
+                                    <!--<i class="ti-user"></i>-->
+                                    <%= image_tag 'population.png', :size => "60x60" %>
+                                </div>
+                            </div>
+                            <div class="col-xs-7">
+                                <div class="numbers">
+                                    <p>Total Population</p>
+                                    <%= @total_population %>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer">
+                            <hr />
+                            <div class="stats">
+                                <i class="ti-reload"></i>
+                                some info:
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
             <div class="col-lg-3 col-sm-6">
                 <div class="card">
                     <div class="content">
