--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,58 +30,16 @@
     <%= stylesheet_link_tag 'bootstrap/themify-icons', rel: 'stylesheet' %>
 
     <!-- For datepicker -->
-    <%= stylesheet_link_tag 'datepicker', rel: 'stylesheet' %>
+    <%= stylesheet_link_tag 'datepicker/bootstrap-datepicker.min', rel: 'stylesheet' %>
 
     </style>
-</head>
-<body>
 
-<div class="wrapper">
-
-    <%= render 'partials/sidebar' %>
-
-    <div class="main-panel">
-        <%= render 'partials/header' %>
-        <%= yield %>
-        <%= render 'partials/footer' %>
-    </div>
-
-    <%= render 'partials/footer' %>
-
-    <!-- Calendar Modal -->
-    <div class="modal fade" id="myModal" role="dialog">
-      <div class="modal-dialog">
-      
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Select MONTH and YEAR to filter data for:</h4>
-          </div>
-          <div class="modal-body">
-            <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-                <input class="span2" size="16" type="text" value="12-02-2012">
-                <span class="add-on"><i class="icon-th"></i></span>
-            </div>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          </div>
-        </div>
-        
-      </div>
-    </div>
-
-</div>
-
-</body>
-
-    <!--   Core JS Files   -->
+        <!--   Core JS Files   -->
     <%= javascript_include_tag 'bootstrap/jquery-1.10.2', type: 'text/javascript' %>
     <%= javascript_include_tag 'bootstrap/bootstrap.min', type: 'text/javascript' %>
 
     <!-- DatePicker plugin -->
-    <%= javascript_include_tag 'bootstrap-datepicker', type: 'text/javascript' %>
+    <%= javascript_include_tag 'datepicker/bootstrap-datepicker.min', type: 'text/javascript' %>
 
     <!--  Checkbox, Radio & Switch Plugins -->
     <%= javascript_include_tag 'bootstrap/bootstrap-checkbox-radio' %>
@@ -104,9 +62,45 @@
         $(document).on("page:receive", function(){
             $(".spinner").hide();
         });
-
-        $('.date-picker').datepicker();
-    
+        
 	</script>
+</head>
+<body>
+    <div class="wrapper">
+
+        <%= render 'partials/sidebar' %>
+
+        <div class="main-panel">
+            <%= render 'partials/header' %>
+            <%= yield %>
+            <%= render 'partials/footer' %>
+        </div>
+
+        <%= render 'partials/footer' %>
+
+        <!-- Calendar Modal -->
+        <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+        
+            <!-- Modal content-->
+            <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Select MONTH and YEAR to filter data for:</h4>
+            </div>
+            <div class="modal-body">
+                <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
+                    <input class="span2" size="16" type="text" value="12-02-2012">
+                    <span class="add-on"><i class="icon-th"></i></span>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</body>
 
 </html>
