--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,22 +29,11 @@
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <%= stylesheet_link_tag 'bootstrap/themify-icons', rel: 'stylesheet' %>
 
-        <!--   Core JS Files   -->
-    <%= javascript_include_tag 'bootstrap/jquery-1.10.2', type: 'text/javascript' %>
-    <%= javascript_include_tag 'bootstrap/bootstrap.min', type: 'text/javascript' %>
+    <!-- Daterange Picker -->
+    <%= stylesheet_link_tag 'daterangepicker', rel: 'stylesheet' %>
 
-    <!--  Checkbox, Radio & Switch Plugins -->
-    <%= javascript_include_tag 'bootstrap/bootstrap-checkbox-radio' %>
-
-    <!--  Charts Plugin -->
-    <%= javascript_include_tag 'bootstrap/chartist.min' %>
-
-    <!--  Notifications Plugin    -->
-    <%= javascript_include_tag 'bootstrap/bootstrap-notify' %>
-
-    <!--  Google Maps Plugin    -->
-    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script> -->
 </head>
+
 <body>
     <div class="wrapper">
 
@@ -58,29 +47,60 @@
 
         <%= render 'partials/footer' %>
 
-        <!-- Calendar Modal -->
-        <div class="modal fade" id="myModal" role="dialog">
-        <div class="modal-dialog">
-        
-            <!-- Modal content-->
-            <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Select MONTH and YEAR to filter data for:</h4>
-            </div>
-            <div class="modal-body">
-                <div class="input-append date" id="dp3" data-date="12-02-2012" data-date-format="dd-mm-yyyy">
-                    <input class="span2" size="16" type="text" value="12-02-2012">
-                    <span class="add-on"><i class="icon-th"></i></span>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            </div>
-            </div>
-        </div>
-        </div>
     </div>
 </body>
+
+    <!--   Core JS Files   -->
+    <%= javascript_include_tag 'bootstrap/jquery-1.10.2', type: 'text/javascript' %>
+    <%= javascript_include_tag 'bootstrap/bootstrap.min', type: 'text/javascript' %>
+
+    <!--  Checkbox, Radio & Switch Plugins -->
+    <%= javascript_include_tag 'bootstrap/bootstrap-checkbox-radio' %>
+
+    <!--  Charts Plugin -->
+    <%= javascript_include_tag 'bootstrap/chartist.min' %>
+
+    <!--  Notifications Plugin    -->
+    <%= javascript_include_tag 'bootstrap/bootstrap-notify' %>
+
+    <!-- Daterange Picker -->
+    <%= javascript_include_tag 'daterangepicker', type: 'text/javascript' %>
+    <%= javascript_include_tag 'moment.min', type: 'text/javascript' %>
+
+    <!--  Google Maps Plugin    -->
+    <!-- <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script> -->
+    <script type="text/javascript">
+        $(function() {
+
+            var start = moment().subtract(29, 'days');
+            var end = moment();
+
+            function cb(start, end) {
+                $('#reportrange span').html(start.format('MMMM D, YYYY') + ' - ' + end.format('MMMM D, YYYY'));
+            }
+
+            $('#reportrange').daterangepicker({
+                startDate: start,
+                endDate: end,
+                ranges: {
+                'Today': [moment(), moment()],
+                'Yesterday': [moment().subtract(1, 'days'), moment().subtract(1, 'days')],
+                'Last 7 Days': [moment().subtract(6, 'days'), moment()],
+                'Last 30 Days': [moment().subtract(29, 'days'), moment()],
+                'This Month': [moment().startOf('month'), moment().endOf('month')],
+                'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')]
+                }
+            }, cb);
+
+            cb(start, end);
+
+        });
+
+        $('#reportrange').on('apply.daterangepicker', function(ev, picker) {
+            var start_date = $('#reportrange').data('daterangepicker').startDate._d;
+            var end_date = $('#reportrange').data('daterangepicker').endDate._d;
+            alert(start_date);
+        })
+    </script>    
 
 </html>
