--- a/app/views/partials/_main_filter.html.erb
+++ b/app/views/partials/_main_filter.html.erb
@@ -1,32 +1,32 @@
 <div class="row">
     <div class="col-lg-12 col-sm-12">
-        <div class="card">
-            <div class="content">
-                <div class="row">
-                    <div class="col-xs-5">
-                        <div class="numbers">
-                            Select Filter Options:
-                        </div>
+                <div class="card">
+                    <div class="header">
+                        <h4 class="title">
+                            Filter Period:
+                        </h4>
+                        <p class="category">
+                            Filter options: Today, Yesterday,
+                        </p>
                     </div>
-                    <div class="col-xs-7">
-                        <div class="numbers">
-                            <i class="ti-filter"></i>
-                            <div class="input-group date">
-                                <input type="text" class="form-control">
-                                <span class="input-group-addon">
-                                    <i class="glyphicon glyphicon-th"></i>
-                                </span>
+                    <div class="content">
+                        <div>
+                            <!-- Form code begins -->
+                            <form method="post">
+                                <div id="reportrange" style="background: #fff; cursor: pointer; padding: 5px 10px; border: 1px solid #ccc; width: 100%">
+                                    <i class="fa fa-calendar"></i>&nbsp;
+                                    <span></span> <i class="fa fa-caret-down"></i>
+                                </div>
+                            </form>
+                            <!-- Form code ends -->                         
+                        </div>
+                        <div class="footer">
+                            <div class="stats">
+                                <i class="ti-reload"></i>
+                                Retrieved in: <%= @retrieval_time %> seconds
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
     </div>
 </div>
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('.datepicker').datepicker();
-  });
-</script>
