Solved ajax filtering issues.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -15,9 +15,11 @@
                                 </div>
                             </div>
                             <div class="col-xs-7">
-                                <div class="numbers">
+                                <div class="numbers" id='total_population'>
                                     <p>Total Population</p>
-                                    <%= @total_population %>
+                                    <span>
+                                        <%= @total_population %>
+                                    </span>
                                 </div>
                             </div>
                         </div>
