Completed ajax filter calls.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -44,9 +44,11 @@
                                 </div>
                             </div>
                             <div class="col-xs-7">
-                                <div class="numbers">
+                                <div class="numbers" id='total_news_sites'>
                                     <p>Sites Read News Today</p>
-                                    <%= @today_news_sites %>
+                                    <span>
+                                        <%= @today_news_sites %>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -71,9 +73,11 @@
                                 </div>
                             </div>
                             <div class="col-xs-7">
-                                <div class="numbers">
+                                <div class="numbers" id='month_births'>
                                     <p>People Born This Month</p>
-                                    <%= @month_births %>
+                                    <span>
+                                        <%= @month_births %>
+                                    </span>    
                                 </div>
                             </div>
                         </div>
@@ -98,9 +102,11 @@
                                 </div>
                             </div>
                             <div class="col-xs-7">
-                                <div class="numbers">
+                                <div class="numbers" id='month_deaths'>
                                     <p>People Died This Month</p>
-                                    <%= @month_deaths %>
+                                    <span>
+                                        <%= @month_deaths %>
+                                    </span>
                                 </div>
                             </div>
                         </div>
@@ -130,8 +136,13 @@
                     <div class="content">
                         <div id="newRegistrations" class="ct-chart"></div>
                         <div class="footer">
-                            <div class="chart-legend">
-                                <i class="fa fa-circle text-info"></i> New Registrations (Total: <%= @total_new_registrations %>)
+                            <div class="chart-legend" id='total_new_registrations'>
+                                <i class="fa fa-circle text-info"></i> 
+                                New Registrations (Total: 
+                                <span>
+                                    <%= @total_new_registrations %>
+                                </span>
+                                )
                             </div>
                             <hr>
                             <div class="stats">
@@ -158,8 +169,13 @@
                     <div class="content">
                         <div id="newBirths" class="ct-chart"></div>
                         <div class="footer">
-                            <div class="chart-legend">
-                                <i class="fa fa-circle text-warning"></i> New Births (Total: <%= @total_births %>)
+                            <div class="chart-legend" id='total_births'>
+                                <i class="fa fa-circle text-warning"></i> New Births 
+                                (Total: 
+                                <span>
+                                    <%= @total_births %>
+                                </span>    
+                                )
                             </div>
                             <hr>
                             <div class="stats">
