--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -124,8 +124,13 @@
                 function(data, status) {
                     console.log(data);
                     alert("Data: " + data + "\nStatus: " + status);
+                    [@total_population,@total_new_registrations,@today_news_sites,@month_births,@month_deaths,@retrieval_time,@total_births,@registrations,@births]
+                    $('#total_population span').text(data[0]);
+                    $('#total_new_registrations span').text(data[1]);
+                    $('#today_news_sites span').text(data[2]);
+                    $('#month_births span').text(data[3]);
+                    $('#month_deaths span').text(data[4]);
                     $('#cube_loader').hide();
-                    $('#total_population span').text(data[1]);
                 }
             );
         })
