--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,8 +54,8 @@
    }
    
    .sk-cube-grid {
-   width: 40px;
-   height: 40px;
+   width: 50px;
+   height: 50px;
    margin: 100px auto;
    }
    
@@ -117,4 +117,15 @@
    
    .ui-datepicker-calendar {
     display: none;
+   }
+
+   #cube_loader {
+    opacity: 0.8;
+    background-color: #EEE3D8;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    z-index: 1000;
    }
