Added news Page.

--- a/app/views/partials/_sidebar.html.erb
+++ b/app/views/partials/_sidebar.html.erb
@@ -19,6 +19,12 @@
                         <p>Dashboard</p>
                     </a>
                 </li>
+                <li>
+                    <a href="/news">
+                        <i class="ti-dashboard"></i>
+                        <p>News</p>
+                    </a>
+                </li>
                 <!-- <li>
                     <a href="table.html">
                         <i class="ti-view-list-alt"></i>
