News detailed page added.

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,2 +1,36 @@
-<h1>News#index</h1>
-<p>Find me in app/views/news/index.html.erb</p>
+        <div class="content">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="card">
+                            <div class="header">
+                                <h4 class="title">Striped Table</h4>
+                                <p class="category">Here is a subtitle for this table</p>
+                            </div>
+                            <div class="content table-responsive table-full-width">
+                                <table class="table table-striped">
+                                    <thead>
+                                        <th>Count</th>
+                                    	<th>Village Name</th>
+                                    	<th>Articles Read</th>
+                                    	<th>Sport Articles</th>
+                                    	<th>Local News Articles</th>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                        	<td>1</td>
+                                        	<td>Biwi</td>
+                                        	<td>5</td>
+                                        	<td>2</td>
+                                        	<td>3</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
